Adding Bulb Changing light gradient

--- a/shadowCast2d.vcxproj
+++ b/shadowCast2d.vcxproj
@@ -144,6 +144,14 @@
   <ItemGroup>
     <ClInclude Include="olcPixelGameEngine.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="grassBG.png" />
+    <Image Include="grassBGDark.png" />
+    <Image Include="light.png" />
+    <Image Include="light2.png" />
+    <Image Include="light3.png" />
+    <Image Include="wall.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
